--- a/index.html
+++ b/index.html
@@ -4,19 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,wght@1,200&family=Tajawal:wght@200&display=swap" rel="stylesheet">
     <title>Casa Amarela</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="bg-img">
-        <div class="container">
-          <div class="topnav">
-            <a href="#home">Kamers</a>
-            <a href="#news">Omgeving</a>
-            <a href="#contact">Contact</a>
-            <a href="#about">Tarieven</a>
+
+   <header>
+    <nav class="topnav">
+      <div class="lang">
+          <a href="#">PT</a>
+          <a href="#">EN</a>
+          <a href="#">NL</a>
           </div>
-        </div>
+    </nav>
+      <p class="name">Casa Amerela</p> 
+      <p class="bnb"> - Bed & Breakfast - </p>
+      <a class="location" href="https://www.google.com/maps/place/Faro+District,+Portugal/data=!4m2!3m1!1s0xd0554ee55d1cfef:0x80e2652e12910e45?sa=X&ved=2ahUKEwijod3F8PD1AhXliv0HHbh4Ai4Q8gF6BAgMEAE" target="_blank">RUA DE BOMBEIROS VOLUNTARIOS DE ELVAS, ELVAS <br> 7350-111 , PORTUGAL <br> <hr></a>
+      
+    </header>
+
+    <div class="container">
+      <div class="middlenav">
+        <a href="#home"> Kamers</a> &bull;
+        <a href="#news"> Omgeving</a> &bull;
+        <a href="#contact"> Contact</a> &bull;
+        <a href="#price"> Tarieven</a> &bull;
+        <a href="#book"> Boeken</a> &bull;
+        <a href="#about"> Over ons</a> &bull;
       </div>
+      </div>
+
+    <img class="bg-img" src="/Images/sunset1.jpeg">
+      
+    <a href="https://www.vecteezy.com/free-vector/sun-logo">Sun Logo Vectors by Vecteezy</a>
 </body>
 </html>
