--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
       </div>
       </div>
 
+
+     <div class="photoDiv">
     <img class="bg-img" src="/Images/sunset1.jpeg">
-      
-    <a href="https://www.vecteezy.com/free-vector/sun-logo">Sun Logo Vectors by Vecteezy</a>
+    <p class="aboutUs"><span class="head">Lorem ipsum dolor sit amet</span> <br> <br>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In arcu cursus euismod quis viverra. Adipiscing elit duis tristique sollicitudin nibh sit amet commodo nulla. Sit amet nisl purus in. Ac orci phasellus egestas tellus rutrum tellus pellentesque eu. At erat pellentesque adipiscing commodo elit at imperdiet. Mauris ultrices eros in cursus turpis. Malesuada fames ac turpis egestas integer eget. Vitae tempus quam pellentesque nec nam aliquam sem. Ac orci phasellus egestas tellus rutrum. In aliquam sem fringilla ut morbi tincidunt augue interdum velit. Aliquam id diam maecenas ultricies mi eget mauris pharetra et. Tellus in metus vulputate eu scelerisque felis.</p>
+    </div>
+    
 </body>
 </html>
