add bullet elements

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
     <div class="container">
       <div class="middlenav">
-        <a href="#home"> Kamers</a> &bull;
-        <a href="#news"> Omgeving</a> &bull;
-        <a href="#contact"> Contact</a> &bull;
-        <a href="#price"> Tarieven</a> &bull;
-        <a href="#book"> Boeken</a> &bull;
-        <a href="#about"> Over ons</a> &bull;
+        <a href="#home"> Kamers</a> <span class="bullelements">&bull;</span>
+        <a href="#news"> Omgeving</a> <span class="bullelements">&bull;</span>
+        <a href="#contact"> Contact</a> <span class="bullelements">&bull;</span>
+        <a href="#price"> Tarieven</a> <span class="bullelements">&bull;</span>
+        <a href="#book"> Boeken</a> <span class="bullelements">&bull;</span>
+        <a href="#about"> Over ons</a> <span class="bullelements">&bull;</span>
       </div>
       </div>
 
